--- a/dz_3.ipynb
+++ b/dz_3.ipynb
@@ -954,7 +954,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "p-value гораздо больше альфа ошибки 0.05. Принимаем нулевую гипотезу: можем предположить, что данные группы имеют схожесть (судя по p-value)."
+    "p-value меньше альфа ошибки 0.05. Отклоняем нулевую гипотезу: можем предположить, что данные группы не имеют схожесть."
    ]
   },
   {
@@ -1009,6 +1009,20 @@
    "source": [
     "Отклоняем нулевую гипотезу: существуют различия показателя dataset в различных возрастных группах. Что соответствует реальности - уровень заболеваемость отличается по возрастным группам."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
